more pretty md files

--- a/projects/_posts/2013-02-12-git-etc.md
+++ b/projects/_posts/2013-02-12-git-etc.md
@@ -15,7 +15,8 @@ links:
 ---
 <!-- info block -->
 
-Simple daemon that automatically creates git repository in the given directory and creates commit at the specified time interval.
+Simple daemon that automatically creates git repository in the given directory
+and creates commit at the specified time interval.
 
 <!--more-->
 
@@ -63,7 +64,8 @@ See "man 1 ctrlconf" for more details
 
 ### <a href="#instruction" class="anchor" id="instruction"><span class="octicon octicon-link"></span></a>Instruction
 
-* Download an [archive](//github.com/arcan1s/git-etc/releases "GitHub") with latest version of source files.
+* Download an [archive](//github.com/arcan1s/git-etc/releases "GitHub") with
+latest version of source files.
 * Extract it and install the application:
 
     ```bash
@@ -106,7 +108,8 @@ If you want to enable daemon autoload run
 systemctl enable git-etc
 ```
 
-But you may change path to configuration file or change parameters. To do it just copy (recommended) the source configuration file to new path
+But you may change path to configuration file or change parameters. To do it just
+copy (recommended) the source configuration file to new path
 
 ```bash
 cp /etc/git-etc.conf /new/path/to/file/git-etc.conf
@@ -134,7 +137,8 @@ ExecStart=/usr/bin/git-etc -c /new/path/to/file/git-etc.conf
 <!-- config block -->
 ## <a href="#config" class="anchor" id="config"><span class="octicon octicon-link"></span></a>Configuration
 
-All settings are stored in `/etc/git-etc.conf`. After edit them you must restart daemon
+All settings are stored in `/etc/git-etc.conf`. After edit them you must restart
+daemon
 
 ```bash
 systemctl restart git-etc
@@ -153,7 +157,13 @@ systemctl restart git-etc
 <!-- gui block -->
 ## <a href="#gui" class="anchor" id="gui"><span class="octicon octicon-link"></span></a>Graphical user interface
 
-Control Config (`ctrlconf`) is GUI for `git-etc` daemon written on `Python2/PyQt4`. This application allows you to view a list of commits and changes in files recorded in commit messages. Also, this application allows you to roll back to a specific commit all files (`git reset --hard`) or individual files (`git diff && git apply`). And you may merge old and new configuration files (used two branches repository - master and experimental). The application may need root privileges. Make sure that `sudo` package is installed.
+Control Config (`ctrlconf`) is GUI for `git-etc` daemon written on `Python2/PyQt4`.
+This application allows you to view a list of commits and changes in files recorded
+in commit messages. Also, this application allows you to roll back to a specific
+commit all files (`git reset --hard`) or individual files (`git diff && git apply`).
+And you may merge old and new configuration files (used two branches repository -
+master and experimental). The application may need root privileges. Make sure that
+`sudo` package is installed.
 
 ### <a href="#gui_configuration" class="anchor" id="gui_configuration"><span class="octicon octicon-link"></span></a>Configuration
 
