--- a/projects/_posts/2013-12-20-queued.md
+++ b/projects/_posts/2013-12-20-queued.md
@@ -14,7 +14,8 @@ links:
 ---
 <!-- info block -->
 
-Daemon for starting jobs to queue of calculations. It was written as proof-of-concept.
+Daemon for starting jobs to queue of calculations. It was written as
+proof-of-concept.
 
 <!--more-->
 
@@ -57,7 +58,8 @@ Parameters:
 
 ### <a href="#instruction" class="anchor" id="instruction"><span class="octicon octicon-link"></span></a>Instruction
 
-* Download an [archive](//github.com/arcan1s/queued/releases "GitHub") with latest version of source files.
+* Download an [archive](//github.com/arcan1s/queued/releases "GitHub") with
+latest version of source files.
 * Extract it and install the application:
 
     ```bash
@@ -96,7 +98,8 @@ If you want to enable daemon autoload run
 systemctl enable queued
 ```
 
-But you may change path to configuration file or change parameters. To do it just copy (recommended) the source configuration file to new path
+But you may change path to configuration file or change parameters. To do it
+just copy (recommended) the source configuration file to new path
 
 ```bash
 cp /etc/queued.conf /path/to/new/queued.conf
@@ -131,7 +134,8 @@ Also you may use `add_queued`.
 
 ## <a href="#configuration" class="anchor" id="configuration"><span class="octicon octicon-link"></span></a>Configuration
 
-All settings are stored in `/etc/queued.conf`. After edit them you must restart daemon
+All settings are stored in `/etc/queued.conf`. After edit them you must restart
+daemon
 
 ```bash
 systemctl restart queued
