--- a/ru/projects/_posts/2013-02-12-git-etc.md
+++ b/ru/projects/_posts/2013-02-12-git-etc.md
@@ -16,7 +16,8 @@ links:
 ---
 <!-- info block -->
 
-Простой демон, который создает git репозиторий в указанной директории и создает коммит в указанный промежуток времени.
+Простой демон, который создает git репозиторий в указанной директории и создает
+коммит в указанный промежуток времени.
 
 <!--more-->
 
@@ -64,7 +65,8 @@ See "man 1 ctrlconf" for more details
 
 ### <a href="#instruction" class="anchor" id="instruction"><span class="octicon octicon-link"></span></a>Инструкция
 
-* Скачайте [архив](//github.com/arcan1s/git-etc/releases "GitHub") с актуальной версией исходных файлов.
+* Скачайте [архив](//github.com/arcan1s/git-etc/releases "GitHub") с актуальной
+версией исходных файлов.
 * Извлеките из него файлы и установите приложение:
 
     ```bash
@@ -107,7 +109,8 @@ systemctl start git-etc
 systemctl enable git-etc
 ```
 
-Но Вы можете изменить путь к конфигурационному файлу или изменить параметры. Для этого, скопируйте (рекомендуется) исходный конфигурационный файл
+Но Вы можете изменить путь к конфигурационному файлу или изменить параметры. Для
+этого, скопируйте (рекомендуется) исходный конфигурационный файл
 
 ```bash
 cp /etc/git-etc.conf /новый/путь/к/git-etc.conf
@@ -135,7 +138,8 @@ ExecStart=/usr/bin/git-etc -c /новый/путь/к/git-etc.conf
 <!-- config block -->
 ## <a href="#config" class="anchor" id="config"><span class="octicon octicon-link"></span></a>Настройка
 
-Все настройки хранятся в `/etc/git-etc.conf`. После редактирования, Вы должны перезапустить демон
+Все настройки хранятся в `/etc/git-etc.conf`. После редактирования, Вы должны
+перезапустить демон
 
 ```bash
 systemctl restart git-etc
@@ -154,8 +158,14 @@ systemctl restart git-etc
 <!-- gui block -->
 ## <a href="#gui" class="anchor" id="gui"><span class="octicon octicon-link"></span></a>Графический интерфейс
 
-Control Config (`ctrlconf`) - графический интерфейс для `git-etc`, написанный на `Python2/PyQt4`. Данное приложение позволяет Вам увидеть список коммитов и изменения в файлах в данных коммитах. Также данное приложение позволит Вам откатиться на указанный коммит (все файлы, посредством `git reset --hard`, или только указанный, посредством `git diff && git apply`). Также Вы можете объединить старый и новый конфигурационные файлы (используются две
-ветки репозитория master и experimental). Приложение может потребовать привелегии root, убедитесь, что пакет `sudo` установлен.
+Control Config (`ctrlconf`) - графический интерфейс для `git-etc`, написанный на
+`Python2/PyQt4`. Данное приложение позволяет Вам увидеть список коммитов и
+изменения в файлах в данных коммитах. Также данное приложение позволит Вам
+откатиться на указанный коммит (все файлы, посредством `git reset --hard`, или
+только указанный, посредством `git diff && git apply`). Также Вы можете
+объединить старый и новый конфигурационные файлы (используются две
+ветки репозитория master и experimental). Приложение может потребовать привелегии
+root, убедитесь, что пакет `sudo` установлен.
 
 ### <a href="#gui_configuration" class="anchor" id="gui_configuration"><span class="octicon octicon-link"></span></a>Настройка
 
