--- a/ru/projects/_posts/2013-12-20-queued.md
+++ b/ru/projects/_posts/2013-12-20-queued.md
@@ -58,7 +58,8 @@ Parameters:
 
 ### <a href="#instruction" class="anchor" id="instruction"><span class="octicon octicon-link"></span></a>Инструкция
 
-* Скачайте [архив](//github.com/arcan1s/queued/releases "GitHub") с актуальной версией исходных файлов.
+* Скачайте [архив](//github.com/arcan1s/queued/releases "GitHub") с актуальной
+версией исходных файлов.
 * Извлеките из него файлы и установите приложение:
 
     ```bash
@@ -97,7 +98,8 @@ systemctl start queued
 systemctl enable queued
 ```
 
-Но Вы можете изменить путь к конфигурационному файлу или изменить параметры. Для этого, скопируйте (рекомендуется) исходный конфигурационный файл
+Но Вы можете изменить путь к конфигурационному файлу или изменить параметры. Для
+этого, скопируйте (рекомендуется) исходный конфигурационный файл
 
 ```bash
 cp /etc/queued.conf /новый/путь/к/queued.conf
@@ -124,15 +126,18 @@ ExecStart=/usr/bin/queued -c /path/to/new/queued.conf
 ### <a href="#adding" class="anchor" id="adding"><span class="octicon octicon-link"></span></a>Добавление задачи
 
 1. Создайте скрипт с командой (например, с именем `script.sh`).
-2. Создайте файл с приоритетом (`script.sh.pr`) для данной задачи, если это необходимо.
-3. Создайте файл с именем пользователя (`script.sh.user`) для данной задачи, если это необходимо
+2. Создайте файл с приоритетом (`script.sh.pr`) для данной задачи, если это
+необходимо.
+3. Создайте файл с именем пользователя (`script.sh.user`) для данной задачи, если
+это необходимо
 4. Скопируйте файлы в `$WORKDIR`
 
 Также Вы можете воспользоваться `add_queued`.
 
 ## <a href="#configuration" class="anchor" id="configuration"><span class="octicon octicon-link"></span></a>Настройка
 
-Все настройки хранятся в `/etc/queued.conf`. После редактирования, Вы должны перезапустить демон
+Все настройки хранятся в `/etc/queued.conf`. После редактирования, Вы должны
+перезапустить демон
 
 ```bash
 systemctl restart queued
